--- a/quand-consulter-un-osteopathe.html
+++ b/quand-consulter-un-osteopathe.html
@@ -226,7 +226,7 @@
               </p>
             </article>
           </div>
-          <img data-aos="fade-left" src="./assets/images/femmes-enc2.jpg" loading="lazy" alt="photo femme enceinte">
+          <img data-aos="fade-left" class="article__wrapper__img" src="./assets/images/femmes-enc2.jpg" loading="lazy" alt="photo femme enceinte">
         </div>
 
       </article>
@@ -281,7 +281,7 @@
               </ul>
             </article>
           </div>
-          <img data-aos="fade-right" class="article__wrapper__img" loading="lazy" src="./assets/images/newborn.jpg" alt="photo nouveau nés">
+          <img data-aos="fade-right" class="article__wrapper__img" loading="lazy" src="./assets/images/osteopathie-nouveau-nes.jpg" alt="photo nouveau nés">
         </div>
 
       </article>
@@ -438,70 +438,69 @@
                 <strong>sportive</strong>.</p>
             </article>
           </div>
-          <img class="article__wrapper__img" src="/assets/images/sportifs.png" loading="lazy" alt="photo sportifs">
+          <img class="article__wrapper__img" src="/assets/images/osteopathie-sportifs.png" loading="lazy" alt="photo sportifs">
         </div>
       </article>
       <article data-aos="fade-in" id="teams" class="article__wrapper">
         <h2 class="article__wrapper__title">Ostéopathie en entreprise</h2>
-        <p class="article__wrapper__text">Votre ostéopathe, Maxime CHOISEAU, exerçant à Noisy-le-Grand, aux portes de
-          Paris, est formée à la prise en charge des troubles musculo-squelettiques induits par l'activité
-          professionnelle ou le stress lié à celle-ci.</p>
+        <p class="article__wrapper__text">Votre <strong>ostéopathe</strong>, Maxime CHOISEAU, exerçant à <strong>Noisy-le-Grand</strong>, aux portes de
+          <strong>Paris</strong>, est formée à la prise en charge des troubles <strong>musculo-squelettiques</strong> induits par l'<strong>activité professionnelle</strong> ou le <strong>stress</strong> lié à celle-ci.</p>
         <article class="article__wrapper">
-          <h3 class="article__wrapper__list-b">Ostéopathie et Troubles Musculo-Squelettiques (TMS)</h3>
-          <p class="article__wrapper__text">Les troubles musculo-squelettiques (TMS) recouvrent un large éventail de
-            pathologies qui affectent principalement les muscles, les nerfs et les tendons. Ces pathologies entraînent
-            des douleurs de plus en plus gênantes pouvant aller jusqu'à l'incapacité de travailler.</p>
-          <p>Les douleurs les plus fréquentes sont :</p>
-          <ul class="article__wrapper__list">
-            <li>Lombalgies (douleurs dans le bas du dos).</li>
-            <li>Dorsalgies (douleurs dans le milieu du dos).</li>
-            <li>Tendinites.</li>
-            <li>Cervicalgies (douleurs au niveau de la nuque).</li>
-          </ul>
-          <p class="article__wrapper__text">L'ostéopathie est en première ligne dans la prévention et le traitement de
-            ces douleurs, apportant au patient une amélioration de son état grâce à une prise en charge globale et à des
-            gestes non invasifs.</p>
+            <h3 class="article__wrapper__list-b">Ostéopathie et Troubles Musculo-Squelettiques (TMS)</h3>
+            <p class="article__wrapper__text">Les troubles <strong>musculo-squelettiques</strong> (TMS) recouvrent un large éventail de
+              <strong>pathologies</strong> qui affectent principalement les <strong>muscles</strong>, les <strong>nerfs</strong> et les <strong>tendons</strong>. Ces <strong>pathologies</strong> entraînent
+              des <strong>douleurs</strong> de plus en plus gênantes pouvant aller jusqu'à l'<strong>incapacité</strong> de travailler.</p>
+            <p>Les <strong>douleurs</strong> les plus fréquentes sont :</p>
+            <ul class="article__wrapper__list">
+                <li><strong>Lombalgies</strong> (douleurs dans le bas du dos).</li>
+                <li><strong>Dorsalgies</strong> (douleurs dans le milieu du dos).</li>
+                <li><strong>Tendinites</strong>.</li>
+                <li><strong>Cervicalgies</strong> (douleurs au niveau de la nuque).</li>
+            </ul>
+            <p class="article__wrapper__text">L'<strong>ostéopathie</strong> est en première ligne dans la <strong>prévention</strong> et le <strong>traitement</strong> de
+              ces <strong>douleurs</strong>, apportant au <strong>patient</strong> une <strong>amélioration</strong> de son état grâce à une prise en charge <strong>globale</strong> et à des
+              gestes non invasifs.</p>
         </article>
         <article class="article__wrapper">
-          <h3 class="article__wrapper__list-b">Pourquoi Faire Appel à un Ostéopathe en Entreprise ?</h3>
-          <p class="article__wrapper__text">L'ostéopathie au sein des entreprises est devenue un réel atout.</p>
-          <p class="article__wrapper__text">Certaines formes d’<strong>entorse</strong>, de <strong>foulure</strong>, de
-            <strong>tendinopathie</strong> et de <strong>pubalgie</strong> peuvent être aisément réduites par votre
-            <strong>ostéopathe</strong>. Adaptée aux <strong>enfants</strong>, l’<strong>ostéopathie</strong> est
-            également indiquée pour corriger les conséquences de <strong>chutes</strong>, de <strong>mouvements
-              répétés</strong> ou de <strong>traumatismes divers</strong>.</p>
+            <h3 class="article__wrapper__list-b">Pourquoi Faire Appel à un Ostéopathe en Entreprise ?</h3>
+            <p class="article__wrapper__text">L'<strong>ostéopathie</strong> au sein des entreprises est devenue un réel <strong>atout</strong>.</p>
+            <p class="article__wrapper__text">Certaines formes d’<strong>entorse</strong>, de <strong>foulure</strong>, de
+              <strong>tendinopathie</strong> et de <strong>pubalgie</strong> peuvent être aisément réduites par votre
+              <strong>ostéopathe</strong>. Adaptée aux <strong>enfants</strong>, l’<strong>ostéopathie</strong> est
+              également indiquée pour corriger les conséquences de <strong>chutes</strong>, de <strong>mouvements
+                répétés</strong> ou de <strong>traumatismes divers</strong>.</p>
         </article>
         <article class="article__wrapper">
-          <h3 class="article__wrapper__list-b">Renforcer Votre Corps</h3>
-          <p class="article__wrapper__text">Selon une étude menée par Hygie en 2005, "près d'1/4 des salariés a pris au
-            moins un arrêt maladie en 2005" (23%).</p>
-          <p class="article__wrapper__text">Ces interruptions de travail peuvent causer du tort à l'entreprise, allant
-            même jusqu'à handicaper son bon fonctionnement.</p>
-          <p class="article__wrapper__text">Devant cette augmentation constante du nombre d'arrêts de travail, il est
-            nécessaire pour les entreprises de trouver des solutions. C'est là que l'ostéopathie entre en jeu</p>
-          <p class="article__wrapper__text">En effet, selon la CRAMIF, plus des 3/4 des maladies professionnelles
-            reconnues sont des troubles musculo-squelettiques.</p>
-          <p class="article__wrapper__text">La prise en charge ostéopathique, au sein même de l'entreprise, facilite
-            l'accès aux soins des employés, sans perturber leur emploi du temps professionnel.</p>
-          <p class="article__wrapper__text">Elle permet également à l'ostéopathe d'évaluer l'ergonomie du poste de
-            travail, et donc de donner des conseils précis et concrets aux salariés afin de l'améliorer. Le traitement
-            ostéopathique peut ainsi permettre une diminution du nombre d'arrêts de travail, et même en réduire leur
-            durée.</p>
+            <h3 class="article__wrapper__list-b">Renforcer Votre Corps</h3>
+            <p class="article__wrapper__text">Selon une <strong>étude</strong> menée par Hygie en 2005, "près d'1/4 des <strong>salariés</strong> a pris au
+              moins un <strong>arrêt maladie</strong> en 2005" (23%).</p>
+            <p class="article__wrapper__text">Ces <strong>interruptions</strong> de travail peuvent causer du tort à l'<strong>entreprise</strong>, allant
+              même jusqu'à <strong>handicaper</strong> son bon fonctionnement.</p>
+            <p class="article__wrapper__text">Devant cette augmentation constante du nombre d'<strong>arrêts de travail</strong>, il est
+              nécessaire pour les <strong>entreprises</strong> de trouver des <strong>solutions</strong>. C'est là que l'<strong>ostéopathie</strong> entre en jeu</p>
+            <p class="article__wrapper__text">En effet, selon la <strong>CRAMIF</strong>, plus des 3/4 des <strong>maladies professionnelles</strong>
+              reconnues sont des troubles <strong>musculo-squelettiques</strong>.</p>
+            <p class="article__wrapper__text">La prise en charge <strong>ostéopathique</strong>, au sein même de l'<strong>entreprise</strong>, facilite
+              l'accès aux <strong>soins</strong> des <strong>employés</strong>, sans perturber leur emploi du temps <strong>professionnel</strong>.</p>
+            <p class="article__wrapper__text">Elle permet également à l'<strong>ostéopathe</strong> d'évaluer l'<strong>ergonomie</strong> du poste de
+              travail, et donc de donner des <strong>conseils</strong> précis et concrets aux <strong>salariés</strong> afin de l'améliorer. Le <strong>traitement</strong>
+              <strong>ostéopathique</strong> peut ainsi permettre une diminution du nombre d'<strong>arrêts de travail</strong>, et même en réduire leur
+              durée.</p>
         </article>
         <article class="article__wrapper">
-          <h3 class="article__wrapper__list-b">Une Efficacité et un Bien-Être Retrouvés</h3>
-          <p class="article__wrapper__text">La prise en charge ostéopathique permet une amélioration de la productivité
-            et de la qualité du travail des employés.</p>
-          <p class="article__wrapper__text">De plus, cette démarche sera très appréciée par les salariés, leur montrant
-            l'importance que l'entreprise attache à leurs conditions de travail et à leur bien-être.</p>
-          <p class="article__wrapper__text">En définitive, l'ostéopathie confère aux salariés une meilleure adaptation à
-            leurs contraintes de travail, permettant ainsi un gain de concentration dans une optique de recherche de
-            productivité.</p>
-          <p class="article__wrapper__text">Pour tout renseignement concernant l'intervention de votre ostéopathe en
-            entreprise, n'hésitez pas à la contacter par téléphone ou par mail via la rubrique "Contact".</p>
+            <h3 class="article__wrapper__list-b">Une Efficacité et un Bien-Être Retrouvés</h3>
+            <p class="article__wrapper__text">La prise en charge <strong>ostéopathique</strong> permet une <strong>amélioration</strong> de la <strong>productivité</strong>
+              et de la <strong>qualité</strong> du travail des <strong>employés</strong>.</p>
+            <p class="article__wrapper__text">De plus, cette démarche sera très appréciée par les <strong>salariés</strong>, leur montrant
+              l'<strong>importance</strong> que l'<strong>entreprise</strong> attache à leurs <strong>conditions de travail</strong> et à leur <strong>bien-être</strong>.</p>
+            <p class="article__wrapper__text">En définitive, l'<strong>ostéopathie</strong> confère aux <strong>salariés</strong> une meilleure adaptation à
+              leurs <strong>contraintes</strong> de travail, permettant ainsi un <strong>gain</strong> de <strong>concentration</strong> dans une optique de recherche de
+              <strong>productivité</strong>.</p>
+            <p class="article__wrapper__text">Pour tout <strong>renseignement</strong> concernant l'<strong>intervention</strong> de votre <strong>ostéopathe</strong> en
+              <strong>entreprise</strong>, n'hésitez pas à la <strong>contacter</strong> par <strong>téléphone</strong> ou par <strong>mail</strong> via la rubrique "Contact".</p>
         </article>
-
-      </article>
+    </article>
+    
 
     </div>
 
